[gd_scene load_steps=6 format=3 uid="uid://c3g4vy0riw75n"]

[ext_resource type="Script" uid="uid://b7qidx2tf22jl" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://ch7dt0fnbqag7" path="res://player.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://pinw8y30lcdl" path="res://mob.tscn" id="2_h2yge"]
[ext_resource type="PackedScene" uid="uid://b3tqbrkmhxfuw" path="res://HUD.tscn" id="4_1bvp3"]

[sub_resource type="Curve2D" id="Curve2D_ig7tw"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 408, -8, 0, 0, 0, 0, 368, 976, 0, 0, 0, 0, 16, 952, 0, 0, 0, 0, 12.5984, 681.839, 0, 0, 0, 0, 0, 0)
}
point_count = 6

[node name="main" type="Node"]
script = ExtResource("1_0xm2m")
mob_scene = ExtResource("2_h2yge")

[node name="Player" parent="." instance=ExtResource("1_ig7tw")]
position = Vector2(368, 56)

[node name="Mobtimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(544, 448)

[node name="MobPath" type="Path2D" parent="."]
position = Vector2(0, -4.76837e-07)
scale = Vector2(3.41176, 1)
curve = SubResource("Curve2D_ig7tw")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
rotation = -0.0196053

[node name="HUD" parent="." instance=ExtResource("4_1bvp3")]

[connection signal="hit" from="Player" to="." method="gameover"]
[connection signal="timeout" from="Mobtimer" to="." method="_on_mobtimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_scoretimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_starttimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
